<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miCash.espol.activity.Start">

    <ImageView
        android:id="@+id/imagePrincipal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        android:src="@drawable/arbol_dinero" />
    <Button
        android:id="@+id/btn_iniciarSesion"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/iniciar_sesion"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn_registrarse"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:text="@string/registrarse" />

    <Button
        android:id="@+id/btn_registrarseFb"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:state_pressed="true"
        android:text="@string/registrarse_con_facebook" />


</LinearLayout>
